--- a/templates/tasks/update_status.html
+++ b/templates/tasks/update_status.html
@@ -34,7 +34,7 @@
         </div>
         
         <button type="submit" class="btn btn-primary">Actualizar Estado</button>
-        <a href="{% url 'task-detail' task.pk %}" class="btn btn-secondary">Cancelar</a>
+        <a href="{% url 'task-detail' task.uuid %}" class="btn btn-secondary">Cancelar</a>
     </form>
 </div>
 {% endblock %}
